--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "emoji-mart": "^3.0.1",
     "firebase": "^9.6.3",
     "next": "^12.0.7",
+    "next-auth": "^4.0.0-beta.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tailwind-scrollbar-hide": "^1.1.7"
