--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@heroicons/react": "^1.0.5",
     "emoji-mart": "^3.0.1",
     "firebase": "^9.6.3",
+    "moment": "^2.29.1",
     "next": "^12.0.7",
     "next-auth": "^4.0.0-beta.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-moment": "^1.1.1",
+    "recoil": "^0.5.2",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
