--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 GOOGLE_CLIENT_ID=432638957177-84evougadgsl0nhsi1ehkq7so7juim22.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_URL=http://localhost:3000
+JWT_SECRET=XKFNIO565TIKV8o3948thgjfvnwofij5yiyg84jfkwdv
