--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "heroku-postbuild":"npm install && next build"
+    "lint": "next lint"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.3",
